[package]
name = "testtarpaulin"
version = "0.1.0"
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = {version = "0.12.0", features = ["serde", "platform_intrinsics"]}
#vek = {git = "https://gitlab.com/veloren/vek.git", branch = "fix_intrinsics" , features = ["serde", "platform_intrinsics"]}
